fix word_wrap mixin

--- a/layout/default/css/mixins.less
+++ b/layout/default/css/mixins.less
@@ -13,7 +13,6 @@
 }
 
 .word_wrap {
-	word-break: break-all;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 }
